OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/Vendor_Program_Requirement__c.object-meta.xml
<CustomObject>
    <description
  >Defines a specific requirement for a Vendor Program, created from a Vendor_Program_Onboarding_Req_Template__c template. Allows vendor programs to add, remove, or override requirements from requirement groups. Each record can be inherited from a group (Is_Inherited__c=true) or program-specific (Is_Overridden__c=true). Example: Vendor Program &quot;Healthcare Provider Program&quot; might have a Vendor_Program_Requirement for &quot;Medical License&quot; created from the template, with Is_Required__c=true and Sequence__c=1. When a dealer starts onboarding for this program, an Onboarding_Requirement__c record is created from this definition. The requirement can be marked as overridden if the program needs different settings than the template default, allowing program-specific customization while maintaining template reuse.</description>
    <label>Vendor Program Requirement</label>
    <nameField>
        <displayFormat>VPR-{00000}</displayFormat>
        <label>Vendor Program Requirement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Program Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>