OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to control whether this requirement should be applied to onboardings for the program.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>