OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Inherited_From_Group__c.field-meta.xml
<CustomField>
    <fullName>Inherited_From_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to the program requirement group that contributed this requirement (for audit/traceability).</description>
    <label>Inherited From Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipName>Inherited_From_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>