OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Is_Inherited__c.field-meta.xml
<CustomField>
    <fullName>Is_Inherited__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the record came from a group template</description>
    <label>Is Inherited</label>
    <type>Checkbox</type>
</CustomField>