OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Is_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin manually modified this requirement</description>
    <label>Is Overridden</label>
    <type>Checkbox</type>
</CustomField>