OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this must be completed</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>