OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Requirement_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional inherited group member</description>
    <label>Requirement Group Member</label>
    <referenceTo>Vendor_Program_Requirement_Group_Member__c</referenceTo>
    <relationshipLabel>Vendor Program Requirements</relationshipLabel>
    <relationshipName>Vendor_Program_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>