OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Requirement_Template__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Base requirement template</description>
    <label>Requirement Template</label>
    <referenceTo>Vendor_Program_Onboarding_Req_Template__c</referenceTo>
    <relationshipLabel>Vendor Program Requirements</relationshipLabel>
    <relationshipName>Vendor_Program_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>