OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Requirement_Type_Values</valueSetName>
    </valueSet>
</CustomField>