OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Identifies how this requirement was added (template, inherited, or custom for the program).</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Requirement_Source_Type</valueSetName>
    </valueSet>
</CustomField>