OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The owning program</description>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipName>Vendor_Program_Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>