OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vendor_Program__c</columns>
    <columns>Requirement_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Is_Required__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>